# 404CircuitSim

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE.md  README.md  requirements.txt
docs/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dontclickme.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherits.html  menudata.js  out.html  pages.html  srs.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  pages_0.js  pages_1.js  searchdata.js
include/: circuit.hpp  circuit_diode.hpp  circuit_linear.hpp  circuit_math.hpp  circuit_parser.hpp  circuit_simulator.hpp  circuit_source.hpp  circuit_structure.hpp  circuit_transistor.hpp
src/: main.cpp
test/: benchmark.cpp  test_eigen.cpp  test_matrix_solve.cpp  test_transient.cpp
test/SpiceNetlists/: RLCI.cir  example.cir  exp.cir  inductorExample.cir  multipleVoltageSources.cir  netlist.cir  optest.cir  phase.cir  rcnetwork.cir  rectifier.cir  (+7 more)
(+224 files in other folders)
